Updated Russian translation

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -15,11 +15,11 @@
     <string name="menu_export">Экспорт настроек</string>
     <string name="menu_import">Импорт настроек</string>
     <string name="menu_submit">Отправить разрешения</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_fetch">Получить разрешения</string>
     <string name="menu_theme">Переключить тему</string>
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">Помощь</string>
     <string name="menu_all">Выделить все</string>
     <string name="menu_clear">Очистить</string>
     <string name="menu_app_launch">Запустить приложение</string>
@@ -61,32 +61,32 @@
     <string name="restrict_view">Просмотр (браузер)</string>
     <string name="title_category">Категория:</string>
     <string name="title_restrict">Отметьте приложения:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Фильтр не задан</string>
 
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 активный фильтр</item>
+        <item quantity="other">%d активных фильтра(ов)</item>
     </plurals>
 
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">IP адрес</string>
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Страна</string>
-    <string name="settings_operator">Operator</string>
+    <string name="settings_operator">Оператор</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Фильтровать по разрешениям</string>
-    <string name="settings_fapplication">Filter by application type</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
+    <string name="settings_fapplication">Фильтровать по типу приложения</string>
+    <string name="settings_log">Отладочный лог (требует перезагрузки)</string>
+    <string name="filter_used">Использовавшие данные</string>
+    <string name="filter_internet">С доступом к интернету</string>
+    <string name="filter_restricted">С установленными разрешениями</string>
+    <string name="filter_app_sys">Системные приложения</string>
+    <string name="filter_app_user">Пользовательские приложения</string>
+    <string name="filter_app_both">Все приложения</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
