--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -15,11 +15,11 @@
     <string name="menu_export">Ayarları dışa aktar</string>
     <string name="menu_import">Ayarları içe aktar</string>
     <string name="menu_submit">Engellemeleri bildir</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_fetch">Engellemeleri indir</string>
     <string name="menu_theme">Temayı değiştir</string>
     <string name="menu_pro">Pro versiyon</string>
     <string name="menu_about">Hakkında</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">Yardım</string>
     <string name="menu_all">Tümü</string>
     <string name="menu_clear">Temizle</string>
     <string name="menu_app_launch">Çalıştır</string>
@@ -71,21 +71,21 @@
     <string name="settings_lat">Enlem</string>
     <string name="settings_lon">Boylam</string>
     <string name="settings_mac">MAC adresi</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">IP adresi</string>
     <string name="settings_phone">Telefon numarası</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Ülke</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Sim Numarası (IMSI)</string>
-    <string name="settings_fpermission">İzne göre filtre et</string>
-    <string name="settings_fapplication">Filter by application type</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
+    <string name="settings_fpermission">İzne göre gizle</string>
+    <string name="settings_fapplication">Uygulama tipine göre gizle</string>
+    <string name="settings_log">Hata ayıklama modu (Yeniden başlatma gerekir)</string>
+    <string name="filter_used">Veriye erişmemişleri gizle</string>
+    <string name="filter_internet">İnternet izni olmayanları gizle</string>
+    <string name="filter_restricted">Engellenmişleri gizle</string>
+    <string name="filter_app_sys">Sistem uygulamaları</string>
+    <string name="filter_app_user">Kullanıcı uygulamaları/string>
+    <string name="filter_app_both">Tüm uygulamalar</string>
     <string name="help_application">Uygulama</string>
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
