--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -78,6 +78,7 @@
     <string name="settings_country">Държава</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Абонатно ID</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">Филтриране по разрешения</string>
     <string name="settings_fapplication">Filter by application type</string>
     <string name="settings_log">Debug log (requires restart)</string>
