--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -78,6 +78,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_country">Pays</string>
     <string name="settings_operator">Opérateur</string>
     <string name="settings_subscriber">ID Abonné</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">Filtrer par permissions</string>
     <string name="settings_fapplication">Filtrer par type d\'application</string>
     <string name="settings_log">Debug log (redémarrage nécessaire)</string>
