--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -78,6 +78,7 @@
     <string name="settings_country">देश</string>
     <string name="settings_operator">ऑपरेटर</string>
     <string name="settings_subscriber">ग्राहक क्रमांक</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">अनुमति के द्वारा फिल्टर करे</string>
     <string name="settings_fapplication">Application के प्रकार के द्वारा फिल्टर करे</string>
     <string name="settings_log">Debug log (पुनरारंभ जरूरी)</string>
