--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -78,6 +78,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_country">Land</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Abonnee ID</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">Filter op rechten</string>
     <string name="settings_fapplication">Filter by application type</string>
     <string name="settings_log">Debug log (herstart vereist)</string>
