--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -79,6 +79,7 @@
     <string name="settings_country">Kraj</string>
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
     <string name="settings_fapplication">Filtruj według typu aplikacji</string>
     <string name="settings_log">Debug log (wymaga restartu)</string>
