--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -79,6 +79,7 @@
     <string name="settings_country">Страна</string>
     <string name="settings_operator">Оператор</string>
     <string name="settings_subscriber">Subscriber ID</string>
+    <string name="settings_ua">User agent</string>
     <string name="settings_fpermission">Фильтровать по разрешениям</string>
     <string name="settings_fapplication">Фильтровать по типу приложения</string>
     <string name="settings_log">Отладочный лог (требует перезагрузки)</string>
