--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -78,7 +78,7 @@
     <string name="settings_country">Land</string>
     <string name="settings_operator">Mobilfunkanbieter</string>
     <string name="settings_subscriber">Subscriber-ID</string>
-    <string name="settings_ua">User agent</string>
+    <string name="settings_ua">User-Agent (Browser)</string>
     <string name="settings_fpermission">Nach Android-Berechtigungen filtern</string>
     <string name="settings_fapplication">Nach App-Typ filtern</string>
     <string name="settings_log">Debug Log (erfordert Neustart)</string>
