Updated Czech translation

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -73,22 +73,22 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
     <string name="settings_mac">MAC adresa</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">IP adresa</string>
     <string name="settings_phone">Telefonní číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Země</string>
     <string name="settings_operator">Operátor</string>
     <string name="settings_subscriber">IMSI</string>
-    <string name="settings_ua">User agent</string>
+    <string name="settings_ua">Agent prohlížeče</string>
     <string name="settings_fpermission">Filtrovat dle oprávnění</string>
-    <string name="settings_fapplication">Filter by application type</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
+    <string name="settings_fapplication">Filtrovat dle typu aplikace</string>
+    <string name="settings_log">Ukládat ladící záznam (vyžaduje restart)</string>
+    <string name="filter_used">Filtrovat dle využití</string>
+    <string name="filter_internet">Filtrovat dle přístupu k internetu</string>
+    <string name="filter_restricted">Filtrovat dle omezení</string>
+    <string name="filter_app_sys">Systémové aplikace</string>
+    <string name="filter_app_user">Uživatelské aplikace</string>
+    <string name="filter_app_both">Všechny aplikace</string>
     <string name="help_application">Aplikace</string>
     <string name="help_internet">má oprávnění k Internetu</string>
     <string name="help_granted">má Android oprávnění</string>
