--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -11,36 +11,36 @@
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_template">Template (Vorlage)</string>
     <string name="menu_report">Problem melden</string>
-    <string name="menu_export">Export der Einst.</string>
-    <string name="menu_import">Import der Einst.</string>
-    <string name="menu_submit">Einschränkungen einsenden (Crowd)</string>
-    <string name="menu_fetch">Einschränkungen runterladen (Crowd)</string>
+    <string name="menu_export">Einstellungen exportieren</string>
+    <string name="menu_import">Einstellungen importieren</string>
+    <string name="menu_submit">Beschränkungen hochladen (Crowd)</string>
+    <string name="menu_fetch">Beschränkungen runterladen (Crowd)</string>
     <string name="menu_theme">Theme wechseln</string>
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
     <string name="menu_help">Hilfe</string>
     <string name="menu_all">Alles (beschränkt)</string>
     <string name="menu_clear">Nichts (beschränkt)</string>
-    <string name="menu_app_launch">Starte App</string>
-    <string name="menu_app_settings">Zeige App-Info</string>
-    <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Wähle Konten zum Erlauben</string>
-    <string name="menu_contacts">Wähle Kontakte zum Erlauben</string>
-    <string name="msg_noupdate">Neueste Version bereits installiert</string>
+    <string name="menu_app_launch">App öffnen</string>
+    <string name="menu_app_settings">App-Info anzeigen</string>
+    <string name="menu_app_store">Im Play Store anzeigen</string>
+    <string name="menu_accounts">Konten für Zugriff freigeben</string>
+    <string name="menu_contacts">Kontakte für Zugriff freigeben</string>
+    <string name="msg_noupdate">Die neueste Version ist bereits installiert</string>
     <string name="msg_restricted" formatted="false">%s beschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Lizenziert für: %s</string>
     <string name="msg_loading">Lade...</string>
-    <string name="msg_edit">Berühre das App-Icon, um alle Berechtigungen zu bearbeiten</string>
+    <string name="msg_edit">Berühren Sie das App-Icon, um alle Berechtigungen zu bearbeiten</string>
     <string name="msg_sure">Sind Sie sicher?</string>
     <string name="msg_done">Fertig</string>
-    <string name="msg_reboot">Geräte-Neustart erforderlich</string>
+    <string name="msg_reboot">Neustart des Geräts erforderlich!</string>
     <string name="msg_random">Zufallswerte erzeugen</string>
-    <string name="msg_random_boot">Zufallswerte nach dem Booten erzeugen</string>
-    <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet, dennoch ist unmöglich zu gewährleisten,
+    <string name="msg_random_boot">Zufallswerte bei Geräte-Neustart erzeugen</string>
+    <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet. Dennoch kann nicht gewährleistet werden, 
 \ndass es einwandfrei auf wirklich JEDEM einzelnen Gerät und für JEDE einzelne App funktioniert.
 \n\nVerwenden Sie XPrivacy ausschließlich auf Ihr eigenes Risiko.</b>\n\nBitte beachten Sie auch die Lizenz:</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
-    <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
+    <string name="restrict_browser">Browser (Lesezeichen, Verlauf)</string>
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_calling">Kommunizieren (Anrufe, SMS, MMS)</string>
     <string name="restrict_clipboard">Zwischenablage</string>
@@ -48,23 +48,23 @@
     <string name="restrict_dictionary">Wörterbuch (Benutzer)</string>
     <string name="restrict_identification">Identifikation (Gerät)</string>
     <string name="restrict_internet">Internet</string>
-    <string name="restrict_location">Ort (genau/ungenau)</string>
+    <string name="restrict_location">Standort (genau/ungenau)</string>
     <string name="restrict_media">Medien (Audio, Fotos, Videos)</string>
     <string name="restrict_messages">Nachrichten (SMS, MMS)</string>
     <string name="restrict_network">Netzwerk (-Adressen)</string>
     <string name="restrict_notifications">Benachrichtigungen</string>
     <string name="restrict_phone">Telefon (ID, Nummern, Anrufe)</string>
-    <string name="restrict_storage">Speicher (-Medien, SD Karte)</string>
+    <string name="restrict_storage">Speicher (-Medien, SD-Karte)</string>
     <string name="restrict_shell">Shell (Kommandos, Superuser)</string>
     <string name="restrict_system">System (installierte Apps)</string>
     <string name="restrict_view">Anzeigen (mittels Browser)</string>
     <string name="title_category">Kategorie:</string>
-    <string name="title_restrict">Markieren zum Einschränken:</string>
-    <string name="title_nofilter">Kein aktiver Filter</string>
+    <string name="title_restrict">Zum Beschränken markieren:</string>
+    <string name="title_nofilter">Kein Filter ausgewählt</string>
 
     <plurals name="title_filters">
-        <item quantity="one">1 Filter aktiv</item>
-        <item quantity="other">%d Filter aktiv</item>
+        <item quantity="one">1 Filter ausgewählt</item>
+        <item quantity="other">%d Filter ausgewählt</item>
     </plurals>
 
     <string name="settings_serial">Serien-Nr.</string>
@@ -78,11 +78,11 @@
     <string name="settings_operator">Mobilfunkanbieter</string>
     <string name="settings_subscriber">Subscriber-ID</string>
     <string name="settings_ua">User-Agent (Browser)</string>
-    <string name="settings_fpermission">Nach Android-Berechtigungen filtern</string>
+    <string name="settings_fpermission">Nach Android-Berechtigungen \nfiltern</string>
     <string name="settings_fapplication">Nach App-Typ filtern</string>
-    <string name="settings_log">Debug Log (erfordert Neustart)</string>
+    <string name="settings_log">Debug-Log (erfordert Geräte-Neustart)</string>
     <string name="filter_used">Nach Datennutzung filtern</string>
-    <string name="filter_internet">Nach Internetzugang filtern</string>
+    <string name="filter_internet">Nach Internet-Berechtigung \nfiltern</string>
     <string name="filter_restricted">Nach Beschränkungen filtern</string>
     <string name="filter_app_sys">System-Apps</string>
     <string name="filter_app_user">Benutzer-Apps</string>
@@ -92,6 +92,6 @@
     <string name="help_granted">hat Android-Berechtigung</string>
     <string name="help_used">hat diese Daten benutzt</string>
     <string name="help_frozen">ist deaktiviert</string>
-    <string name="help_dangerous">Einschränkung bedenklich (App-Absturz)</string>
+    <string name="help_dangerous">Beschränkung bedenklich (App-Absturz)</string>
 
 </resources>
